<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Agregar Nuevo Alumno" android:textSize="24sp" android:textStyle="bold" android:gravity="center" />
    <EditText android:id="@+id/editTextNombre" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:hint="Nombre del alumno" android:inputType="textPersonName" />
    <EditText android:id="@+id/editTextApellido" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:hint="Apellido del alumno" android:inputType="textPersonName" />
    <EditText android:id="@+id/editTextEdad" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:hint="Edad del alumno" android:inputType="number" />
    <Button android:id="@+id/btnGuardar" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Guardar" />
</LinearLayout>
