<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/btnCambiar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ver profesores" app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerView" android:layout_width="0dp" android:layout_height="0dp" android:clipToPadding="false" android:paddingBottom="88dp" app:layout_constraintTop_toBottomOf="@id/btnCambiar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fab_agregar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="24dp" android:contentDescription="Agregar alumno" app:fabSize="normal" app:srcCompat="@android:drawable/ic_input_add" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf=
    <ProgressBar android:id="@+id/progressCarga" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/btnCambiar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <TextView android:id="@+id/tvEstado" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="24dp" android:gravity="center" android:textSize="18sp" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/btnCambiar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <Button android:id="@+id/btnReintentar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Reintentar" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/tvEstado" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

